# espresso-logs

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrepignore  AGENTS.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.dev.yml  pyproject.toml  requirements.txt
.copilot/: instructions.md
.github/: copilot-instructions.md  dependabot.yml
.github/copilot-prompts/: bug-triage.md  code-exploration.md  code-review.md  image-sourcing.md  implementation.md  main-agent-kickoff.md
.github/workflows/: ci.yml  deploy.yml
.squad/: ceremonies.md  decisions.md  privacy-gate.md  routing.md  team.md
.squad/archive/: handoff-038-summary.md
.squad/decisions/: aria-chip-radius-correction.md  decisions.md
.squad/health-report/: 2026-05-14T03:11:00Z-scribe-archive.md
.squad/identity/: now.md  wisdom.md
.squad/inbox/: README.md  handoff-038-summary.md
.squad/log/: 2025-07-14-storage-method-review.md  2025-07-28-storage-method-resolved.md  2025-07-29-compass-ideation.md  2025-07-29-fab-portal-fix.md  2025-07-30-architecture-decisions.md  2025-07-30-spec-017-rereview.md  2026-05-06-v2-spec-authoring.md  2026-05-08-spa-auth-fix.md  2026-05-13-session-recovery.md  2026-05-13T23-46-53Z-chip-chrome-fixes.md  2026-05-14-m4-ci-rca.md  2026-05-14T03:11:00Z-chip-design-fix.md  2026-05-15-hotfix-beans-catalog-brew-log.md  2026-05-15-postgres-smoke-test.md  2026-05-15-retro.md  2026-05-15T02-48-50Z-session-closeout.md  2026-05-15T03-18-07Z-m4-prerequisites.md  2026-05-15T06-28-31Z-pr-review-comment.md  2026-05-15T145237-use-postgres-to-app-secrets.md  2026-05-15T21:14:57Z-m4-migration-adr.md  2026-06-06T154550-0700-branch-status.md  2026-06-07T11-51-10-0700-spec039-t32-dose-format-rca.md  2026-06-07T11-52-48-0700-spec039-t32-dose-format-triage.md  2026-06-07T12-21-24-0700-spec039-validation-passed-stale-state-cleared.md  2026-06-07T12-25-23-0700-spec039-t35-pr-readiness.md  2026-06-07T12-30-24-0700-spec039-t35-complete.md  2026-06-07T12-53-23-0700-spec039-production-ready-branch-closeout.md  20260517T063645Z-postgres-join-fix-plan.md  20260517T133037Z-rca.md  20260517T181500Z-031-brew-log-fix.md  20260518T062904Z-pr-review.md  20260521T060335Z-m5-spec034-planning.md  20260521T161700Z-m5-spec034-implementation.md  20260523-101023-e2e-harness-jwt-auth.md  20260523T072815Z-spec034-m5-items-1-5.md  20260523T155630Z-spec034-feature-analysis.md  20260523T170005Z-spec034-welcome-flow-amendment.md  20260523T170215Z-household-session-routes.md  20260601-ci-failure-rca.md  20260601-session-ci-fixes-pr80.md  (+8 more)
.squad/orchestration-log/: 2025-07-14-storage-method-review.md  2025-07-29-finn-compass.md  2025-07-29-priya-compass.md  2025-07-30-q1-zones.md  2025-07-30-q2-roast.md  2025-07-30-q3-llm.md  2026-05-06-spec-019-plan-review.md  2026-05-13-maya-session-recovery.md  (+23 more)
alembic/: env.py
app/: auth.py  config.py  deps.py  main.py  rate_limit.py  setup_guard.py
docs/: ROTATION_PLAYBOOK.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.spec039-baseline.config.ts  service-worker.test.ts  tailwind.config.ts  vite.config.ts
scripts/: _mapping.py  _seed.py  brew_log_reconcile.py  cleanup_test_fixture_rows.py  migrate_sheets_to_postgres.py  pre-push-check.sh  run-ci-tests.sh  smoke_test_postgres.py  spec040-privacy-audit.sh  validate_migration.py
tests/: conftest.py  db_safety.py  doubles.py  test_active_household.py  test_api.py  test_api_brew_log_idempotency.py  test_api_brew_log_n1.py  test_api_catalog_create_image.py  test_api_catalog_infer.py  test_api_e2e_cleanup.py  test_api_e2e_reset_limiter.py  test_api_e2e_seed_user.py  test_api_e2e_session.py  test_api_e2e_spec039.py  test_api_hardware_create_image.py  test_api_sql_household_isolation.py  test_auth.py  test_auth_refresh_replay.py  test_auth_service.py  test_auth_wave4.py  test_bootstrap.py  test_brew_log_list_paginated.py  test_ci_sql_isolation_gate.py  test_config_gcp.py  test_db_fixture_contract.py  test_defaults.py  test_deps.py  test_dual_write_disabled.py  test_dual_write_fail_loud.py  test_fake_sheets_parity.py  test_health.py  test_households.py  test_hw_cache.py  test_ids.py  test_image_store.py  test_import_wizard.py  test_inference.py  test_integration.py  test_inventory_list_all.py  test_link_tokens.py  (+8 more)
(+522 files in other folders)
