[project]
name = "coffee-tracker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.14.1",
    "gspread>=6.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "google-auth>=2.30",
    "google-cloud-storage>=2.18",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.15.12",
    "anyio[trio]>=4.4",
    "pytest-cov>=5.0",
    "playwright>=1.59.0",
    "mypy>=2.0.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
# tests/e2e/ requires a live server + Playwright and runs separately in CI.
# Exclude it from default discovery so `pytest tests/` matches the CI unit step.
# Use `pytest tests/e2e/ -m smoke` to run browser smoke tests explicitly.
norecursedirs = ["tests/e2e"]
filterwarnings = [
    # authlib internals are migrating jose → joserfc; suppress until authlib 2.0
    "ignore:authlib.jose module is deprecated",
]
markers = [
    "smoke: quick post-deploy sanity checks; always run in CI",
]
