[project]
name = "coffee-tracker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pydantic-settings>=2.14.1",
    "gspread>=6.1",
    "authlib>=1.7.2",
    "httpx>=0.27",
    "google-auth>=2.53.0",
    "google-cloud-storage>=2.18",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3",
    "cloud-sql-python-connector[asyncpg]>=1.20.3",
    "idna>=3.18",
    "slowapi>=0.1.9",
    "starlette==1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.15",
    "anyio[trio]>=4.4",
    "pytest-cov>=7.1.0",
    "playwright>=1.60.0",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
# tests/e2e/ requires a live server + Playwright and runs separately in CI.
# Exclude it from default discovery so `pytest tests/` matches the CI unit step.
# Use `pytest tests/e2e/ -m smoke` to run browser smoke tests explicitly.
norecursedirs = ["tests/e2e"]
filterwarnings = [
    # authlib internals are migrating jose → joserfc; suppress until authlib 2.0
    "ignore:authlib.jose module is deprecated",
]
markers = [
    "smoke: quick post-deploy sanity checks; always run in CI",
]
